--- a/src/pages/gallery.module.scss
+++ b/src/pages/gallery.module.scss
@@ -1,13 +1,24 @@
+@import "../styles/global.scss";
+
 .container {
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(480px, 1fr));
-  grid-auto-flow: row dense;
-  gap: 0.25rem;
-  line-height: 0;
+  display: -ms-flexbox; /* IE10 */
+  display: flex;
+  -ms-flex-wrap: wrap; /* IE10 */
+  flex-wrap: wrap;
+  padding: 0px;
 }
 
-@media only screen and (max-width: 600px) {
-  .container {
-    grid-template-columns: 100%;
+.column {
+  -ms-flex: 50%; /* IE10 */
+  flex: 50%;
+  max-width: 50%;
+  padding: $image-spacing-gallery;
+}
+
+@media screen and (max-width: 600px) {
+  .column {
+    -ms-flex: 100%;
+    flex: 100%;
+    max-width: 100%;
   }
 }
