--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -11,6 +11,8 @@ $text-dark: white;
 $breakpoint-tablet: 900px;
 $breakpoint-phone: 600px;
 
+$image-spacing-gallery: 4px;
+
 html {
   body {
     &.body-light {
